[gd_scene load_steps=48 format=3 uid="uid://b2pje2cydnmbu"]

[ext_resource type="Texture2D" uid="uid://b6h1d5yfo1ogp" path="res://sprites/bg/wall.png" id="1_buxbu"]
[ext_resource type="Texture2D" uid="uid://6ktcfk3ed8go" path="res://bg/wall.png" id="1_u5gax"]
[ext_resource type="PackedScene" uid="uid://21hk8qfeso4" path="res://scenes/player.tscn" id="2_2nb44"]
[ext_resource type="Shader" path="res://shader/blur.gdshader" id="2_75s8v"]
[ext_resource type="Script" path="res://scripts/Camera.gd" id="3_bvvq6"]
[ext_resource type="Texture2D" uid="uid://bxvlyarujqke8" path="res://levels/objects/shelf longer.png" id="3_kblo3"]
[ext_resource type="PackedScene" uid="uid://bij4tgilhpkxw" path="res://levels/objects/floortile.tscn" id="4_vx2wv"]
[ext_resource type="PackedScene" uid="uid://dtt0eobudcvo4" path="res://levels/objects/cap.tscn" id="5_4xuxj"]
[ext_resource type="PackedScene" uid="uid://ucry2jboqsjc" path="res://levels/objects/benga/benga(1a).tscn" id="6_4ngix"]
[ext_resource type="PackedScene" uid="uid://dcascrhra2oy4" path="res://levels/objects/benga/benga(1b).tscn" id="7_dcg6g"]
[ext_resource type="Texture2D" uid="uid://boqdvppuc7g8p" path="res://sprites/objects/blast alien.png" id="8_cjwci"]
[ext_resource type="Script" path="res://scripts/takeaway benga.gd" id="8_hf2bd"]
[ext_resource type="PackedScene" uid="uid://do3r2faib5rf6" path="res://levels/alien/alien.tscn" id="9_5jq3i"]
[ext_resource type="Script" path="res://scripts/BlastAlien.gd" id="9_jr7nf"]
[ext_resource type="Texture2D" uid="uid://bbdtinltvna4w" path="res://sprites/objects/benga 2.png" id="9_wne3l"]
[ext_resource type="Texture2D" uid="uid://btt5ake4a1yv4" path="res://sprites/objects/benga 4.png" id="10_qqo4s"]
[ext_resource type="Texture2D" uid="uid://bndtssryskey3" path="res://sprites/objects/blast alien black hole.png" id="10_tojb6"]
[ext_resource type="AudioStream" uid="uid://b75i4k2cjlo7i" path="res://assets/SFX/220191__gameaudio__space-swoosh-brighter.wav" id="14_hpp2n"]
[ext_resource type="Texture2D" uid="uid://grsu0bq2vylt" path="res://sprites/objects/laundry sock.png" id="14_l5vmu"]
[ext_resource type="PackedScene" uid="uid://ct7vaaj07qx84" path="res://levels/objects/laundry.tscn" id="15_jaka7"]
[ext_resource type="Texture2D" uid="uid://biwoout1fb8s1" path="res://sprites/objects/table.png" id="16_lqr8i"]
[ext_resource type="PackedScene" uid="uid://b1h5nukvgvccf" path="res://levels/objects/ball_of_paper.tscn" id="17_dxk8q"]
[ext_resource type="PackedScene" uid="uid://d3m1keebkrooa" path="res://levels/objects/book4.tscn" id="19_cbd1d"]
[ext_resource type="Texture2D" uid="uid://dx56g7obw3rj7" path="res://sprites/objects/box 3.png" id="21_n1dab"]
[ext_resource type="PackedScene" uid="uid://d3cdoejoe3q5v" path="res://levels/objects/book5.tscn" id="22_5kmyu"]
[ext_resource type="Texture2D" uid="uid://bxubtetimyqy" path="res://sprites/objects/box 2.png" id="23_2xox8"]
[ext_resource type="Texture2D" uid="uid://b8wrx272h8ga8" path="res://sprites/objects/box.PNG" id="23_22uil"]
[ext_resource type="Texture2D" uid="uid://dgyvbtlg1q5s4" path="res://sprites/objects/book 10.png" id="24_1v4ql"]
[ext_resource type="Texture2D" uid="uid://crrt5xs6n5hj7" path="res://sprites/objects/book 8.png" id="25_f6ljg"]
[ext_resource type="PackedScene" uid="uid://cjtenyecu44ha" path="res://levels/objects/shoe.tscn" id="26_uu8xl"]
[ext_resource type="PackedScene" uid="uid://bw68qse37lixg" path="res://levels/scene_change.tscn" id="30_oprhe"]
[ext_resource type="Texture2D" uid="uid://dpf173bb5i4i3" path="res://bg/tile wall.png" id="32_c83r7"]
[ext_resource type="AudioStream" uid="uid://d2bd5ph673ceo" path="res://assets/audio/dizzy_racing.wav" id="33_knb3u"]
[ext_resource type="Texture2D" uid="uid://glgfhmcpiav" path="res://sprites/ui/button .png" id="34_2upt4"]
[ext_resource type="Texture2D" uid="uid://dyt3obrvudn5x" path="res://sprites/ui/button spacebar.png" id="35_o80yb"]
[ext_resource type="Theme" uid="uid://cv5ix05irjhgf" path="res://themes/pausemenu theme.tres" id="35_tv0xj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s54ar"]
shader = ExtResource("2_75s8v")
shader_parameter/strength = 20

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u7l11"]
shader = ExtResource("2_75s8v")
shader_parameter/strength = 20

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_5yvud"]
scenes/1/scene = ExtResource("4_vx2wv")

[sub_resource type="TileSet" id="TileSet_ckm5e"]
tile_size = Vector2i(165, 128)
sources/2 = SubResource("TileSetScenesCollectionSource_5yvud")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bk0q6"]
size = Vector2(160, 2028)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_anm4o"]
size = Vector2(283.75, 466.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a4dwm"]
size = Vector2(809, 542)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xmnr7"]
size = Vector2(260, 306)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t2r28"]
size = Vector2(260, 306)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bswly"]
size = Vector2(320, 487)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pryon"]
size = Vector2(234, 186)

[node name="level1" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1152, 648)

[node name="Wall" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
z_index = -8
position = Vector2(577, 322)
texture = ExtResource("1_u5gax")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="ShelfLonger" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
material = SubResource("ShaderMaterial_s54ar")
position = Vector2(8600.4, 331.25)
scale = Vector2(0.453528, 0.40174)
texture = ExtResource("3_kblo3")

[node name="Table" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
material = SubResource("ShaderMaterial_u7l11")
position = Vector2(8458.4, 439.25)
scale = Vector2(0.275, 0.275)
texture = ExtResource("16_lqr8i")

[node name="floor" type="TileMap" parent="."]
z_index = 2
position = Vector2(1, 144)
tile_set = SubResource("TileSet_ckm5e")
format = 2
layer_0/tile_data = PackedInt32Array(327672, 2, 65536, 327673, 2, 65536, 327674, 2, 65536, 327675, 2, 65536, 327676, 2, 65536, 327677, 2, 65536, 327678, 2, 65536, 327679, 2, 65536, 262144, 2, 65536, 262145, 2, 65536, 262146, 2, 65536, 262147, 2, 65536, 262148, 2, 65536, 262149, 2, 65536, 262150, 2, 65536, 262151, 2, 65536, 262152, 2, 65536, 262153, 2, 65536, 262154, 2, 65536, 262155, 2, 65536, 262156, 2, 65536, 262157, 2, 65536, 262158, 2, 65536, 262159, 2, 65536, 262160, 2, 65536, 262161, 2, 65536, 262162, 2, 65536, 262163, 2, 65536, 262164, 2, 65536, 262165, 2, 65536, 262166, 2, 65536, 262167, 2, 65536, 262168, 2, 65536, 262169, 2, 65536, 262170, 2, 65536, 262171, 2, 65536, 262172, 2, 65536, 262173, 2, 65536, 262226, 2, 65536, 262225, 2, 65536, 262224, 2, 65536, 262223, 2, 65536, 262222, 2, 65536, 262221, 2, 65536, 262220, 2, 65536, 262219, 2, 65536, 262218, 2, 65536, 262217, 2, 65536, 262216, 2, 65536, 262215, 2, 65536, 262214, 2, 65536, 262213, 2, 65536, 262212, 2, 65536, 262211, 2, 65536, 262210, 2, 65536, 262209, 2, 65536, 262208, 2, 65536, 262207, 2, 65536, 262206, 2, 65536, 262205, 2, 65536, 262204, 2, 65536, 262203, 2, 65536, 262202, 2, 65536, 262201, 2, 65536, 262200, 2, 65536, 262199, 2, 65536, 262198, 2, 65536, 262197, 2, 65536, 262196, 2, 65536, 262195, 2, 65536, 262194, 2, 65536, 262193, 2, 65536, 262192, 2, 65536, 262191, 2, 65536, 262190, 2, 65536, 262189, 2, 65536, 262188, 2, 65536, 262187, 2, 65536, 262186, 2, 65536, 262185, 2, 65536, 262184, 2, 65536, 262183, 2, 65536, 262182, 2, 65536, 262181, 2, 65536, 262180, 2, 65536, 262179, 2, 65536, 262178, 2, 65536, 262177, 2, 65536, 262176, 2, 65536, 262175, 2, 65536, 262174, 2, 65536)

[node name="wall" type="StaticBody2D" parent="floor"]
z_index = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor/wall"]
position = Vector2(-1237, -375)
shape = SubResource("RectangleShape2D_bk0q6")

[node name="TileWall" type="Sprite2D" parent="floor/wall"]
position = Vector2(-1275, 554)
scale = Vector2(1, 25.48)
texture = ExtResource("32_c83r7")

[node name="player" parent="." groups=["player"] instance=ExtResource("2_2nb44")]
z_index = 2
position = Vector2(136, 412)
timer = 90

[node name="Camera2D" type="Camera2D" parent="player"]
position = Vector2(1, -3)
limit_left = -1237
limit_bottom = 780
editor_draw_limits = true
script = ExtResource("3_bvvq6")

[node name="objects" type="Node2D" parent="."]
z_index = 2

[node name="cap" parent="objects" instance=ExtResource("5_4xuxj")]
position = Vector2(176, 537)
rotation = -0.00315017

[node name="mini benga tower" type="Node2D" parent="objects"]
position = Vector2(14, 12)

[node name="BlastAlien" type="Sprite2D" parent="objects/mini benga tower"]
visible = false
z_index = 1
position = Vector2(1170, 431)
scale = Vector2(2.38, 2.38)
texture = ExtResource("8_cjwci")
script = ExtResource("9_jr7nf")

[node name="BlastAlienBlackHole" type="Sprite2D" parent="objects/mini benga tower"]
visible = false
z_index = 1
position = Vector2(1202, 433)
texture = ExtResource("10_tojb6")
script = ExtResource("9_jr7nf")

[node name="Benga2" type="Sprite2D" parent="objects/mini benga tower"]
position = Vector2(1164, 617)
texture = ExtResource("9_wne3l")

[node name="Benga4" type="Sprite2D" parent="objects/mini benga tower"]
position = Vector2(1072, 552)
texture = ExtResource("10_qqo4s")

[node name="Benga5" type="Sprite2D" parent="objects/mini benga tower"]
position = Vector2(1166, 552)
texture = ExtResource("10_qqo4s")

[node name="Benga6" type="Sprite2D" parent="objects/mini benga tower"]
position = Vector2(1261, 552)
texture = ExtResource("10_qqo4s")

[node name="Benga3" type="Sprite2D" parent="objects/mini benga tower"]
position = Vector2(1161, 487)
texture = ExtResource("9_wne3l")

[node name="Benga8" type="Sprite2D" parent="objects/mini benga tower"]
position = Vector2(1069, 417)
texture = ExtResource("10_qqo4s")

[node name="Benga9" type="Sprite2D" parent="objects/mini benga tower"]
position = Vector2(1163, 417)
texture = ExtResource("10_qqo4s")

[node name="Benga10" type="Sprite2D" parent="objects/mini benga tower"]
position = Vector2(1258, 417)
texture = ExtResource("10_qqo4s")

[node name="Benga11" type="Sprite2D" parent="objects/mini benga tower"]
position = Vector2(1158, 352)
texture = ExtResource("9_wne3l")

[node name="Benga12" type="Sprite2D" parent="objects/mini benga tower"]
position = Vector2(1068, 287)
texture = ExtResource("10_qqo4s")

[node name="Benga13" type="Sprite2D" parent="objects/mini benga tower"]
position = Vector2(1162, 287)
texture = ExtResource("10_qqo4s")

[node name="Benga14" type="Sprite2D" parent="objects/mini benga tower"]
position = Vector2(1257, 287)
texture = ExtResource("10_qqo4s")

[node name="Benga15" type="Sprite2D" parent="objects/mini benga tower"]
position = Vector2(1159, 222)
texture = ExtResource("9_wne3l")

[node name="StaticBody2D" type="StaticBody2D" parent="objects/mini benga tower"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="objects/mini benga tower/StaticBody2D"]
position = Vector2(1166.13, 413.75)
shape = SubResource("RectangleShape2D_anm4o")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="objects/mini benga tower"]
stream = ExtResource("14_hpp2n")

[node name="Benga" parent="objects" instance=ExtResource("6_4ngix")]
position = Vector2(2187, 629)

[node name="Benga2" parent="objects" instance=ExtResource("7_dcg6g")]
position = Vector2(9019, 632)

[node name="laundry" parent="objects" instance=ExtResource("15_jaka7")]
position = Vector2(5100, 396)
scale = Vector2(1.48, 1.48)

[node name="LaundrySock" type="Sprite2D" parent="objects"]
position = Vector2(7751, 650)
rotation = -2.74846
scale = Vector2(1.44, 1.44)
texture = ExtResource("14_l5vmu")

[node name="ball of paper" parent="objects" instance=ExtResource("17_dxk8q")]
position = Vector2(5886, 588)

[node name="ball of paper2" parent="objects" instance=ExtResource("17_dxk8q")]
position = Vector2(6625, 583)

[node name="ball of paper3" parent="objects" instance=ExtResource("17_dxk8q")]
position = Vector2(6466, 576)

[node name="ball of paper4" parent="objects" instance=ExtResource("17_dxk8q")]
position = Vector2(6553, 440)

[node name="ball of paper5" parent="objects" instance=ExtResource("17_dxk8q")]
position = Vector2(7401, 581)

[node name="ball of paper6" parent="objects" instance=ExtResource("17_dxk8q")]
position = Vector2(7254, 572)

[node name="ball of paper7" parent="objects" instance=ExtResource("17_dxk8q")]
position = Vector2(7101, 572)

[node name="Book" parent="objects" instance=ExtResource("19_cbd1d")]
position = Vector2(10914, 622)

[node name="ball of paper8" parent="objects" instance=ExtResource("17_dxk8q")]
position = Vector2(3799, 475)
rotation = 0.057656

[node name="Book2" parent="objects" instance=ExtResource("22_5kmyu")]
position = Vector2(11439, 634)

[node name="Box" type="Sprite2D" parent="objects"]
modulate = Color(0.486275, 0.486275, 0.486275, 1)
z_index = -1
position = Vector2(12136, 371.168)
texture = ExtResource("21_n1dab")

[node name="Box2" type="Sprite2D" parent="objects"]
z_index = -1
position = Vector2(12722, -208.832)
rotation = -0.106083
texture = ExtResource("23_22uil")
flip_h = true

[node name="ColorRect" type="ColorRect" parent="objects/Box2"]
z_index = -1
offset_left = -391.0
offset_top = 298.0
offset_right = 117.0
offset_bottom = 980.0
rotation = 0.0241574
color = Color(0.141176, 0.141176, 0.141176, 0.709804)

[node name="Box3" type="Sprite2D" parent="objects"]
z_index = -1
position = Vector2(13131, 361.168)
texture = ExtResource("23_2xox8")

[node name="StaticBody2D" type="StaticBody2D" parent="objects/Box3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="objects/Box3/StaticBody2D"]
position = Vector2(5.5, 45)
shape = SubResource("RectangleShape2D_a4dwm")

[node name="Book10" type="Sprite2D" parent="objects"]
position = Vector2(12948.5, 105.909)
rotation = -0.0106105
texture = ExtResource("24_1v4ql")

[node name="Book8" type="Sprite2D" parent="objects"]
position = Vector2(12070.5, 111.909)
rotation = 0.0211163
texture = ExtResource("25_f6ljg")

[node name="Book11" type="Sprite2D" parent="objects"]
position = Vector2(13036.5, 50.9089)
rotation = -0.0106105
texture = ExtResource("24_1v4ql")

[node name="shoe" parent="objects" instance=ExtResource("26_uu8xl")]
position = Vector2(3631, 598)

[node name="takeaway benga" type="Node" parent="."]
script = ExtResource("8_hf2bd")

[node name="takeaway" type="Area2D" parent="."]
position = Vector2(179, 83)

[node name="CollisionShape2D" type="CollisionShape2D" parent="takeaway"]
position = Vector2(462, 418)
shape = SubResource("RectangleShape2D_xmnr7")

[node name="alien" parent="." instance=ExtResource("9_5jq3i")]
position = Vector2(-2082, -1266)
isplaying = true

[node name="alien2" parent="." instance=ExtResource("9_5jq3i")]
position = Vector2(2264, -2274)
isplaying = true
flipsprite = true

[node name="Wall" type="Sprite2D" parent="."]
z_index = -11
position = Vector2(898.501, -320)
scale = Vector2(3.74219, 3.32407)
texture = ExtResource("1_buxbu")

[node name="takeaway2" type="Area2D" parent="."]
position = Vector2(1019, 83)

[node name="CollisionShape2D" type="CollisionShape2D" parent="takeaway2"]
position = Vector2(462, 418)
shape = SubResource("RectangleShape2D_t2r28")

[node name="takeaway3" type="Area2D" parent="."]
position = Vector2(5756, 86)

[node name="CollisionShape2D" type="CollisionShape2D" parent="takeaway3"]
position = Vector2(462, 418)
shape = SubResource("RectangleShape2D_xmnr7")

[node name="takeaway4" type="Area2D" parent="."]
position = Vector2(12133, 92)

[node name="CollisionShape2D" type="CollisionShape2D" parent="takeaway4"]
position = Vector2(432, 327.5)
shape = SubResource("RectangleShape2D_bswly")

[node name="scene_change" parent="." instance=ExtResource("30_oprhe")]
position = Vector2(12486, 482)
connected_scene = "Level2"

[node name="CollisionShape2D" type="CollisionShape2D" parent="scene_change"]
position = Vector2(150, 83)
shape = SubResource("RectangleShape2D_pryon")

[node name="TileWall" type="Sprite2D" parent="."]
position = Vector2(13736, 336)
scale = Vector2(1, 24.44)
texture = ExtResource("32_c83r7")
flip_h = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("33_knb3u")
volume_db = -15.0
autoplay = true

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("33_knb3u")

[node name="Instructions" type="Node2D" parent="."]
position = Vector2(-147, 135.5)

[node name="Label move" type="Label" parent="Instructions"]
offset_left = -39.0
offset_top = 27.5
offset_right = 56.0
offset_bottom = 60.5
theme = ExtResource("35_tv0xj")
text = "to move"

[node name="ButtonA" type="Sprite2D" parent="Instructions/Label move"]
position = Vector2(-123, 15.5)
texture = ExtResource("34_2upt4")

[node name="LabelA" type="Label" parent="Instructions/Label move/ButtonA"]
offset_left = -11.0
offset_top = -20.5
offset_right = 29.0
offset_bottom = 12.5
theme = ExtResource("35_tv0xj")
text = "A"

[node name="ButtonD" type="Sprite2D" parent="Instructions/Label move"]
position = Vector2(-50, 15.5)
texture = ExtResource("34_2upt4")

[node name="LabelD" type="Label" parent="Instructions/Label move/ButtonD"]
offset_left = -9.0
offset_top = -20.5
offset_right = 31.0
offset_bottom = 12.5
theme = ExtResource("35_tv0xj")
text = "D"

[node name="Label climb" type="Label" parent="Instructions"]
offset_left = 271.0
offset_top = 26.5
offset_right = 377.0
offset_bottom = 59.5
theme = ExtResource("35_tv0xj")
text = "to climb"

[node name="ButtonW" type="Sprite2D" parent="Instructions/Label climb"]
position = Vector2(-123, 15.5)
texture = ExtResource("34_2upt4")

[node name="LabelW" type="Label" parent="Instructions/Label climb/ButtonW"]
offset_left = -11.0
offset_top = -24.5
offset_right = 29.0
offset_bottom = 8.5
theme = ExtResource("35_tv0xj")
text = "W"

[node name="ButtonS" type="Sprite2D" parent="Instructions/Label climb"]
position = Vector2(-50, 15.5)
texture = ExtResource("34_2upt4")

[node name="LabelS" type="Label" parent="Instructions/Label climb/ButtonS"]
offset_left = -9.0
offset_top = -21.5
offset_right = 31.0
offset_bottom = 11.5
theme = ExtResource("35_tv0xj")
text = "S"

[node name="Label jump" type="Label" parent="Instructions"]
offset_left = 635.0
offset_top = 23.5
offset_right = 730.0
offset_bottom = 56.5
theme = ExtResource("35_tv0xj")
text = "to jump"

[node name="ButtonSpacebar" type="Sprite2D" parent="Instructions/Label jump"]
position = Vector2(-116, 18)
texture = ExtResource("35_o80yb")

[node name="LabelSpacebar" type="Label" parent="Instructions/Label jump/ButtonSpacebar"]
offset_left = -42.0
offset_top = -24.0
offset_right = 34.0
offset_bottom = 9.0
theme = ExtResource("35_tv0xj")
text = "SPACE"

[connection signal="body_entered" from="takeaway" to="takeaway benga" method="_on_takeaway_body_entered"]
[connection signal="body_entered" from="takeaway2" to="takeaway benga" method="_on_takeaway_2_body_entered"]
[connection signal="body_entered" from="takeaway3" to="takeaway benga" method="_on_takeaway_3_body_entered"]
[connection signal="body_entered" from="takeaway4" to="takeaway benga" method="_on_takeaway_4_body_entered"]
